# plc_server_app

./: .gitignore  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: .env  .env.example  .gitignore  .taurignore  Cargo.toml  config.json  db_header.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  create_sql.rs  data_handler.rs  main.rs  plc_commands.rs  regist_data_to_db.rs  state.rs  tray.rs  types.rs
src-tauri/src/sql/: create_table.sql
src/components/: AddPlcDialog.jsx  EditPlcDialog.jsx  Listner.jsx  PLCCard.jsx  StackCard.jsx
