[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono="0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
time="0.3"
tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-single-instance="2.0"
tauri-plugin-log = { version = "2", features = ["colored"] }
fern = { version = "0.7", features = ["date-based"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
lazy_static = "1.4"
